# eve-api

./: .gitignore  APIv2.md  Makefile  OPERATOR_CONSOLE.md  PROFILE.md  README.md  README_nestedapp.md
.devcontainer/: Dockerfile
.github/workflows/: ci.yaml
go/attest/: attest.pb.go
go/config/: appconfig.pb.go  devconfig.pb.go  edge_node_cluster.pb.go  netcmn.pb.go  netconfig.pb.go  patch_envelope.pb.go  vm.pb.go
go/evecommon/: acipherinfo.pb.go  evecommon.pb.go
go/hardwarehealth/: hardware_health.pb.go
go/hardwareinventory/: msg.pb.go
go/info/: hardware.pb.go  info.pb.go
go/nestedappinstancemetrics/: nestedappinstanceinventory.pb.go  nestedappinstancelog.pb.go  nestedappinstancemetrics.pb.go
go/profile/: network.pb.go
proto/attest/: attest.proto
proto/config/: appconfig.proto  devconfig.proto  devmodel.proto  edge_node_cluster.proto  netcmn.proto  netconfig.proto  patch_envelope.proto  vm.proto
proto/evecommon/: acipherinfo.proto  evecommon.proto  netcmn.proto
proto/hardwarehealth/: hardware_health.proto
proto/hardwareinventory/: msg.proto
proto/info/: bond.proto  edge_node_cluster.proto  hardware.proto  info.proto
proto/metrics/: metrics.proto
proto/nestedappinstancemetrics/: nestedappinstanceinventory.proto  nestedappinstancelog.proto  nestedappinstancemetrics.proto  runtimestatus.proto
proto/profile/: local_profile.proto  network.proto  signal.proto
python/attest/: attest_pb2.py
rust/: Cargo.toml  README.md  build.rs
rust/src/: lib.rs
rust/src/crypto/: authenticatable.rs  cert_store.rs  error.rs  mod.rs  provider.rs  signer.rs
(+20 files in other folders)
